syntax = "proto3";

package pb;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/2landhnal/digital-preservation-shared-payload/pb";


message GetFileFormatRequest {
	string extension = 1;
	string version = 2;
}

message GetFileFormatResponse {
  	string name        = 1;
	string version     = 2;
	bool isStable    = 3;
	int32 stablePoint = 4;
	google.protobuf.Timestamp  createdAt   = 5;
	google.protobuf.Timestamp  updatedAt   = 6;
}

